# env_logger

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.cargo/: config.toml
.github/: dependabot.yml  renovate.json5  settings.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md
.github/workflows/: audit.yml  ci.yml  docs.yml  main.yml  pre-commit.yml  rust-next.yml
ci/: Cargo.toml
ci/src/: main.rs  permute.rs  task.rs
crates/env_filter/: CHANGELOG.md  Cargo.toml
crates/env_filter/src/: directive.rs  filter.rs  filtered_log.rs  lib.rs  op.rs  parser.rs  regex.rs
env_filter/: Cargo.toml
env_filter/src/: filtered_log.rs  lib.rs  regex.rs
env_logger/: CHANGELOG.md  Cargo.toml  release.toml
env_logger/src/: lib.rs
examples/: custom_default_format.rs  custom_format.rs  custom_logger.rs  custom_target.rs  default.rs  default_wasm.rs  direct_logger.rs  filters_from_code.rs  in_tests.rs  init_twice.rs  millis_since_init.rs  syslog_friendly_format.rs
src/: fmt.rs  lib.rs  logger.rs  wasm.rs
src/filter/: mod.rs
src/fmt/: atty.rs  humantime.rs  kv.rs  localtime.rs  mod.rs
src/fmt/chrono/: extern_impl.rs  mod.rs  shim_impl.rs
src/fmt/humantime/: extern_impl.rs  mod.rs  shim_impl.rs
src/fmt/termcolor/: extern_impl.rs  mod.rs  shim_impl.rs
src/fmt/writer/: atty.rs  buffer.rs  mod.rs  target.rs  wasm.rs  web.rs
src/fmt/writer/buffer/: mod.rs  plain.rs  termcolor.rs
src/fmt/writer/termcolor/: extern_impl.rs  shim_impl.rs
tests/: init-twice-retains-filter.rs  log-in-log.rs  log_tls_dtors.rs  node.rs  regexp_filter.rs  web.rs
