[package]
name = "env_logger"
edition = "2018"
version = "0.8.2"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/env-logger-rs/env_logger/"
documentation = "https://docs.rs/env_logger"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger"]

[workspace]
members = [
    "ci"
]

[dependencies]
log = { version = "0.4.8", features = ["std"] }
regex = { version = "1.0.3", optional = true, default-features=false, features=["std", "perf"] }
termcolor = { version = "1.0.2", optional = true }
humantime = { version = "2.0.0", optional = true }
atty = { version = "0.2.5", optional = true }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "^0.2.64"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "^0.3.19"

[[test]]
name = "regexp_filter"
harness = false

[[test]]
name = "log-in-log"
harness = false

[[test]]
name = "log_tls_dtors"
harness = false

[[test]]
name = "init-twice-retains-filter"
harness = false

[[test]]
name = "web"
harness = false

[[test]]
name = "node"
harness = false

[features]
default = ["termcolor", "atty", "humantime", "regex"]
