[package]
name = "env_logger"
edition = "2018"
version = "0.9.1"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dobefore/env_logger_rs"
documentation = "https://docs.rs/env_logger"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger"]
include = ["src/**/*", "tests", "LICENSE-*", "README.md", "CHANGELOG.md"]

[workspace]
members = [
    "ci"
]

[dependencies]
log = { version = "0.4.8", features = ["std"] }
regex = { version = "1.0.3", optional = true, default-features=false, features=["std", "perf"] }
termcolor = { version = "1.1.1", optional = true }
humantime = { version = "2.0.0", optional = true }
atty = { version = "0.2.5", optional = true }
# optional dependency
chrono = { version = "0.4.19", optional = true }

[[test]]
name = "regexp_filter"
harness = false

[[test]]
name = "log-in-log"
harness = false

[[test]]
name = "log_tls_dtors"
harness = false

[[test]]
name = "init-twice-retains-filter"
harness = false

# By default, all features are disabled unless explicitly enabled. 
# This can be changed by specifying the default feature.
# When the package is built, 
# the default feature is enabled which in turn enables the listed features.
[features]
default = ["termcolor", "atty", "humantime", "regex"]
# local time feature.this feature will override humantime if both of them are enabled.
localtime=["chrono"]
