[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "tests/**/*",
]

[package]
name = "env_logger"
version = "0.11.3"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
repository = "https://github.com/rust-cli/env_logger"
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/env_logger/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["auto-color", "humantime", "regex"]
color = ["dep:anstream", "dep:anstyle"]
auto-color = ["color", "anstream/auto"]
humantime = ["dep:humantime"]
regex = ["env_filter/regex"]
unstable-kv = ["log/kv"]

[dependencies]
log = { version = "0.4.21", features = ["std"] }
env_filter = { version = "0.1.0", path = "crates/env_filter", default-features = false }
humantime = { version = "2.0.0", optional = true }
anstream = { version = "0.6.11", default-features = false, features = ["wincon"], optional = true }
anstyle = { version = "1.0.6", optional = true }

[[test]]
name = "regexp_filter"
harness = false

[[test]]
name = "log-in-log"
harness = false

[[test]]
name = "log_tls_dtors"
harness = false

[[test]]
name = "init-twice-retains-filter"
harness = false
